# ai-usage

./: .gitignore  Cargo.toml  README.md  install.sh  justfile
docs/: README.md
docs/docs/: 01-product-vision.md  02-architecture.md  03-data-contract-status-json.md  04-login-and-session-storage.md  05-playwright-collector.md  06-cosmic-applet-ui.md  07-installation-systemd.md  08-security-and-privacy.md  09-implementation-plan.md  10-reuse-visual-mute-notes.md  11-error-states.md  12-parsers.md  13-testing-checklist.md
docs/prompts/: collector.prompt.md  create-applet.prompt.md  ui.prompt.md
docs/scripts/: merge-status.mjs.example
docs/systemd/: ai-usage-collector.service
docs/templates/: app.desktop.example  claude-page-text-sample.txt  codex-page-text-sample.txt  status.example.json
resources/: app.desktop  app.metainfo.xml
scripts/: ai-usage-auth.mjs  ai-usage-collect.mjs  package-lock.json  package.json
scripts/lib/: chrome-profile.mjs  xvfb.mjs
src/: app.rs  format.rs  icons.rs  main.rs  status.rs
systemd/: ai-usage-collector.timer
templates/: config.example.json
